docs/apache-airflow-providers-google/8.6.0/_sources/_api/tests/system/providers/google/cloud/dataflow/example_dataflow_template/index.rst.txt
:py:mod:`tests.system.providers.google.cloud.dataflow.example_dataflow_template`
================================================================================

.. py:module:: tests.system.providers.google.cloud.dataflow.example_dataflow_template

.. autoapi-nested-parse::

   Example Airflow DAG for testing Google Dataflow "DataflowTemplatedJobStartOperator" operator.



Module Contents
---------------

.. py:data:: ENV_ID
   

   

.. py:data:: DAG_ID
   :annotation: = dataflow_template

   

.. py:data:: BUCKET_NAME
   

   

.. py:data:: FILE_NAME
   :annotation: = text.txt

   

.. py:data:: GCS_TMP
   

   

.. py:data:: GCS_STAGING
   

   

.. py:data:: GCS_OUTPUT
   

   

.. py:data:: PYTHON_FILE_LOCAL_PATH
   

   

.. py:data:: LOCATION
   :annotation: = europe-west3

   

.. py:data:: default_args
   

   

.. py:data:: create_bucket
   

   

.. py:data:: test_run
   

   

