docs/apache-airflow-providers-google/10.2.0/_sources/_api/tests/system/providers/google/cloud/dataflow/example_dataflow_template/index.rst.txt
:py:mod:`tests.system.providers.google.cloud.dataflow.example_dataflow_template`
================================================================================

.. py:module:: tests.system.providers.google.cloud.dataflow.example_dataflow_template

.. autoapi-nested-parse::

   Example Airflow DAG for testing Google Dataflow
   :class:`~airflow.providers.google.cloud.operators.dataflow.DataflowTemplatedJobStartOperator` operator.



Module Contents
---------------

.. py:data:: ENV_ID

   

.. py:data:: PROJECT_ID

   

.. py:data:: DAG_ID
   :value: 'dataflow_template'

   

.. py:data:: BUCKET_NAME

   

.. py:data:: FILE_NAME
   :value: 'text.txt'

   

.. py:data:: SCHEMA
   :value: 'schema.json'

   

.. py:data:: GCS_TMP

   

.. py:data:: GCS_STAGING

   

.. py:data:: GCS_OUTPUT

   

.. py:data:: PYTHON_FILE_LOCAL_PATH

   

.. py:data:: SCHEMA_LOCAL_PATH

   

.. py:data:: LOCATION
   :value: 'europe-west3'

   

.. py:data:: default_args

   

.. py:data:: BODY

   

.. py:data:: create_bucket

   

.. py:data:: test_run

   

